--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header img{
     margin: 10px;
 
 }
-#identité{
+#identity{
     width: auto;
     padding-top: 5px;
     padding-bottom: 0px;
@@ -43,7 +43,7 @@ header img{
     margin-bottom: 0px;
     text-align: center;
 }
-#identité h1{
+#identity h1{
     font-size: 2em;
     color:#9CCC65;
     margin-top: 10px;
@@ -55,7 +55,7 @@ header img{
     color: black;
     font-weight: lighter;
 }
-#identité h2{
+#identity h2{
     font-size: 1.5em;
     margin-top: 0px;
     margin-bottom: 10px;
@@ -95,7 +95,7 @@ aside h3 {
 .contact a:hover{
     color:black;
 }
-.à_propos p{
+.about p{
     text-align: justify;
     font-size: 1em;
     padding: 10px;
@@ -110,7 +110,7 @@ aside h3 {
     justify-content: space-between;
     align-items:center ;
 }
-.icones_loisirs{
+.icones_hobbies{
     width: 45px;
     height: 45px;
     color: #404040;
@@ -122,7 +122,7 @@ aside h3 {
     align-items: center;
 
 }
-.titre_droit{
+.right_title{
     display:flex;
     flex-direction: row;
     align-items: baseline;
@@ -130,23 +130,23 @@ aside h3 {
     border-bottom:1px solid #9CCC65;
     margin-top: 40px;
 }
-.titre_droit h3{
+.right_title h3{
     margin:5px;
     font-size: 1.5em;
 }
-.icones_principales{
+.main_icones{
     color:#9CCC65;
     font-size: 1.5em;
     margin-right: 10px;
 }
-.contenu_droit{
+.right_content{
     display:flex;
     flex-direction: column;
     align-items: baseline;
     justify-content: start;
     margin-top: 10px;
 }
-.icones_date_lieu{
+.date_place_icones{
     display:flex;
     flex-direction:row;
     align-items: baseline;
@@ -178,11 +178,11 @@ ul {
         flex-direction: row;
         justify-content: space-around;
     }
-    .contenu_droit{
+    .right_content{
         display: flex;
         flex-direction: row;
     }
-    .icones_date_lieu{
+    .date_place_icones{
         min-width: 150px;
     }
     
@@ -219,13 +219,13 @@ ul {
         margin-top: 40px;
         margin-bottom: 40px;
     }
-    #identité{
+    #identity{
         text-align: justify;
         margin-left: 40px;
         margin-top:40px;
         margin-bottom: 40px;
     }
-    #identité h1{
+    #identity h1{
         font-size: 3em;
         font-weight: bold;
         margin-bottom: 10px;
@@ -234,7 +234,7 @@ ul {
         font-weight:lighter;
     }
 
-    #identité h2{
+    #identity h2{
         font-size: 2em;
         font-weight: lighter;
     }
@@ -244,7 +244,7 @@ ul {
         margin-right: 0px;
         width: 65%;
     }
-    .titre_droit{
+    .right_title{
         margin-top:0px;
     }
 
@@ -253,12 +253,12 @@ ul {
         margin: 0px;
         width: 30%;
     }
-    .contenu_droit{
+    .right_content{
         display: flex;
         flex-direction: row;
         
     }
-    .icones_date_lieu{
+    .date_place_icones{
         min-width: 200px;
     }
     .titre_droit{
@@ -268,8 +268,8 @@ ul {
         text-align: left;
         padding-bottom: 20px;
     }
-    .à_propos p{
-        padding: 20px 20px 360px 20px ;
+    .about p{
+        padding: 20px 20px 330px 20px ;
         
     }
     .icones{
